crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-postgres_clickbench_q23_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q23"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                      |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                                                                                                                                                                 |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                                                                                                                                                                  |
|               |   Sort: c DESC NULLS FIRST                                                                                                                                                                                                                                                                                                                                                                                |
|               |     Projection: hits.SearchPhrase, min(hits.URL), min(hits.Title), count(Int64(1)) AS c, count(DISTINCT hits.UserID)                                                                                                                                                                                                                                                                                      |
|               |       Aggregate: groupBy=[[hits.SearchPhrase]], aggr=[[min(hits.URL), min(hits.Title), count(Int64(1)), count(DISTINCT hits.UserID)]]                                                                                                                                                                                                                                                                     |
|               |         TableScan: hits projection=[Title, UserID, URL, SearchPhrase], full_filters=[hits.SearchPhrase != Utf8(""), hits.Title LIKE Utf8("%Google%"), hits.URL NOT LIKE Utf8("%.google.%")]                                                                                                                                                                                                               |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                        |
|               |   CooperativeExec                                                                                                                                                                                                                                                                                                                                                                                         |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                    |
|               |       VirtualExecutionPlan name=postgres compute_context=<CONNECTION> base_sql=SELECT "hits"."SearchPhrase", min("hits"."URL"), min("hits"."Title"), count(1) AS "c", count(DISTINCT "hits"."UserID") FROM "hits" WHERE ((("hits"."SearchPhrase" <> '') AND "hits"."Title" LIKE '%Google%') AND "hits"."URL" NOT LIKE '%.google.%') GROUP BY "hits"."SearchPhrase" ORDER BY "c" DESC NULLS FIRST LIMIT 10 |
|               |                                                                                                                                                                                                                                                                                                                                                                                                           |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
