crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-postgres_clickbench_q25_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q25"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                             |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                                                        |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                                                         |
|               |   Projection: hits.SearchPhrase                                                                                                                                                                                                                                                                  |
|               |     Sort: to_timestamp(hits.EventTime) ASC NULLS LAST                                                                                                                                                                                                                                            |
|               |       Projection: hits.SearchPhrase, hits.EventTime                                                                                                                                                                                                                                              |
|               |         TableScan: hits projection=[EventTime, SearchPhrase], full_filters=[hits.SearchPhrase != Utf8("")]                                                                                                                                                                                       |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                                               |
|               |   CooperativeExec                                                                                                                                                                                                                                                                                |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                           |
|               |       VirtualExecutionPlan name=postgres compute_context=<CONNECTION> base_sql=SELECT "SearchPhrase" FROM (SELECT "hits"."SearchPhrase", "hits"."EventTime" FROM "hits" WHERE ("hits"."SearchPhrase" <> '') ORDER BY to_timestamp("hits"."EventTime") ASC NULLS LAST) AS "derived_sort" LIMIT 10 |
|               |                                                                                                                                                                                                                                                                                                  |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
