crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-postgres_clickbench_q26_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q26"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                               |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                          |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                           |
|               |   Sort: hits.SearchPhrase ASC NULLS LAST                                                                                                                                                                           |
|               |     Projection: hits.SearchPhrase                                                                                                                                                                                  |
|               |       TableScan: hits projection=[SearchPhrase], full_filters=[hits.SearchPhrase != Utf8("")]                                                                                                                      |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                 |
|               |   CooperativeExec                                                                                                                                                                                                  |
|               |     BytesProcessedExec                                                                                                                                                                                             |
|               |       VirtualExecutionPlan name=postgres compute_context=<CONNECTION> base_sql=SELECT "hits"."SearchPhrase" FROM "hits" WHERE ("hits"."SearchPhrase" <> '') ORDER BY "hits"."SearchPhrase" ASC NULLS LAST LIMIT 10 |
|               |                                                                                                                                                                                                                    |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
