crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-postgres_clickbench_q28_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q28"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                             |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                                                        |
|               |  Limit: skip=0, fetch=25                                                                                                                                                                                                                                                                         |
|               |   Sort: l DESC NULLS FIRST                                                                                                                                                                                                                                                                       |
|               |     Projection: hits.CounterID, avg(length(hits.URL)) AS l, count(Int64(1)) AS c                                                                                                                                                                                                                 |
|               |       Filter: count(Int64(1)) > Int64(100000)                                                                                                                                                                                                                                                    |
|               |         Aggregate: groupBy=[[hits.CounterID]], aggr=[[avg(length(hits.URL)), count(Int64(1))]]                                                                                                                                                                                                   |
|               |           TableScan: hits projection=[CounterID, URL], full_filters=[hits.URL != Utf8("")]                                                                                                                                                                                                       |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                                               |
|               |   CooperativeExec                                                                                                                                                                                                                                                                                |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                           |
|               |       VirtualExecutionPlan name=postgres compute_context=<CONNECTION> base_sql=SELECT "hits"."CounterID", avg(length("hits"."URL")) AS "l", count(1) AS "c" FROM "hits" WHERE ("hits"."URL" <> '') GROUP BY "hits"."CounterID" HAVING (count(1) > 100000) ORDER BY "l" DESC NULLS FIRST LIMIT 25 |
|               |                                                                                                                                                                                                                                                                                                  |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
