crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-postgres_clickbench_q29_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q29"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                                                                                                                                                                                                            |
|               |  Limit: skip=0, fetch=25                                                                                                                                                                                                                                                                                                                                                                                                                             |
|               |   Sort: l DESC NULLS FIRST                                                                                                                                                                                                                                                                                                                                                                                                                           |
|               |     Projection: regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1")) AS k, avg(length(hits.Referer)) AS l, count(Int64(1)) AS c, min(hits.Referer)                                                                                                                                                                                                                                                                        |
|               |       Filter: count(Int64(1)) > Int64(100000)                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |         Aggregate: groupBy=[[regexp_replace(hits.Referer, Utf8("^https?://(?:www\.)?([^/]+)/.*$"), Utf8("\1"))]], aggr=[[avg(length(hits.Referer)), count(Int64(1)), min(hits.Referer)]]                                                                                                                                                                                                                                                             |
|               |           TableScan: hits projection=[Referer], full_filters=[hits.Referer != Utf8("")]                                                                                                                                                                                                                                                                                                                                                              |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|               |   CooperativeExec                                                                                                                                                                                                                                                                                                                                                                                                                                    |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                               |
|               |       VirtualExecutionPlan name=postgres compute_context=<CONNECTION> base_sql=SELECT regexp_replace("hits"."Referer", '^https?://(?:www\.)?([^/]+)/.*$', '\1') AS "k", avg(length("hits"."Referer")) AS "l", count(1) AS "c", min("hits"."Referer") FROM "hits" WHERE ("hits"."Referer" <> '') GROUP BY regexp_replace("hits"."Referer", '^https?://(?:www\.)?([^/]+)/.*$', '\1') HAVING (count(1) > 100000) ORDER BY "l" DESC NULLS FIRST LIMIT 25 |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
